# c_resource

vscode_makefile_cmake_templete/soldier_cmake/: CMakeLists.txt
vscode_makefile_cmake_templete/soldier_cmake/src/: gun.cpp
vscode_makefile_cmake_templete/soldier_g++/: prog++
vscode_makefile_cmake_templete/soldier_makefile/: Makefile
vscode_makefile_cmake_templete/soldier_makefile/include/: gun.h  soldier.h
vscode_makefile_cmake_templete/soldier_makefile/objs/: gun.cpp.mk  main.cpp.mk  soldier.cpp.mk
vscode_makefile_cmake_templete/soldier_makefile/src/: main.cpp  soldier.cpp
vscode_makefile_cmake_templete/soldier_makefile/workspace/: pro
